# kdevelop

plugins/: CMakeLists.txt
plugins/clang/: clangsupport.cpp
plugins/clang/duchain/: clanghelpers.cpp
plugins/meson/: CMakeLists.txt  kdevmesonmanager.json  mesonbuilder.cpp  mesonbuilder.h  mesonconfig.cpp  mesonconfig.h  mesonimportjob.cpp  mesonjob.cpp  mesonjob.h  mesonmanager.cpp  mesonmanager.h  mesonnewbuilddir.cpp  mesonnewbuilddir.ui
plugins/meson/icons/: CMakeLists.txt
plugins/meson/settings/: mesonadvancedsettings.cpp  mesonconfigpage.cpp  mesonconfigpage.h  mesonconfigpage.ui  mesonnewbuilddir.cpp
